--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
     <p>
         影をつける：<a href="sample6-4.html">sample6-4.html</a><br>
     </p>
+     <h2>CGグラフィックス＿レポート</h2>
+    <p>
+       レポート:<a href="report2.html">report2.html</a><br> 
+    </p>
 </body>
 </html>
