--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </p>
      <h2>CGグラフィックス＿レポート</h2>
     <p>
-       レポート:<a href="report2.html">report2.html</a><br> 
+       レポート:<a href="CGreport.html">CGreport.html</a><br> 
     </p>
 </body>
 </html>
